--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="/img/consultorio.jpeg"
+              src="./img/consultorio.jpeg"
               alt="Mulher sorrindo penteando outra mulher"
             />
           </div>
@@ -78,7 +78,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="/img/professional.jpeg"
+              src="./img/professional.jpeg"
               alt="3 mulheres sorrindo"
             />
           </div>
