Change the photos and entering the icon
The icon was changed such as the images representing the dentist.
Also, the "home" text was altereded

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OriginSix</title>
+    <title>LincolnGama</title>
 
     <!-- ICONS -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
@@ -30,11 +30,13 @@
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">Lincoln<span>Gama</span></a>
+        <!--<a class="logo" href="#">Lincoln<span>Gama</span></a>-->
+        <img id="logo" src="./img/dentist-name.png" alt="logo">
         <div class="menu">
           <ul class="grid">
             <!-- menu -->
             <!-- #home - references to other component on the HTML structure -->
+            <li><img src="./img/icon.png" alt="logo"></li>
             <li><a class="title" href="#home">Início</a></li>
             <li><a class="title" href="#about">Sobre</a></li>
             <li><a class="title" href="#services">Serviços</a></li>
@@ -56,14 +58,14 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="./img/consultorio.jpeg"
+              src="./img/consultorio.jpg"
               alt="Mulher sorrindo penteando outra mulher"
             />
           </div>
           <div class="text">
-            <h2 class="title">Lorem ipsum dolor sit amet</h2>
+            <h2 class="title">Tenha o sorriso dos seus sonhos</h2>
             <p>
-              Lorem ipsum dolor sit amet
+              Somos especialistas no trato dentário
             </p>
             <a class="button" href="#">Agendar um horário</a>
           </div>
@@ -78,7 +80,7 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="./img/professional.jpeg"
+              src="./img/dentist.jpg"
               alt="3 mulheres sorrindo"
             />
           </div>
@@ -151,30 +153,6 @@
             <div class="card">
               <i class="icon-droplet"></i>
               <h3 class="title">Clareamento</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </div>
-            <div class="card">
-              <i class="icon-device_hub"></i>
-              <h3 class="title">Restauração</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </div>
-            <div class="card">
-              <i class="icon-grin"></i>
-              <h3 class="title">Endodontia (canal)</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </div>
-            <div class="card">
-              <i class="icon-brush"></i>
-              <h3 class="title">Tratamento periodontal (raspagem)</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
